2010-01-07  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-url-reserved-p): bug fix: some
	reserved characters considered unreserved. Thanks to IMAI
	Toshiyuki

2010-01-06  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel): Move
	`debug-printf' to outside of `unwind-protect' because we expect
	that mostly code of this function should be executed by way of
	BODYFORM of `unwind-protect', not UNWINDFORM.
	(twittering-http-post-default-sentinel): Likewise.

	* twittering-mode.el (twittering-http-get-list-index-sentinel): Add 
	`debug-printf' same as `twittering-http-get-default-sentinel'.

	* twittering-mode.el (twittering-status-not-blank-p): Fix and
	modify a regexp pattern.

2010-01-04  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-header): Change
	syntax of error message to fit the GNU Emacs Lisp convention.
	(twittering-get-response-body): Likewise.
	(twittering-tinyurl-get): Likewise.

	* twittering-mode.el (twittering-start-http-session): Change
	syntax of question message to fit the GNU Emacs Lisp convention.

	* twittering-mode.el (twittering-user-agent-default-function): Use
	`format' instead of `concat' to easy understand.
	(twittering-sign-string-default-function): Likewise.

	* twittering-mode.el (twittering-start-http-session): Remove an
	unnecessary call to `format' because all arguments of `error' pass
	to `format'.
	(twittering-make-http-request): Likewise.
	(twittering-url-copy-file-async): Likewise.

2010-01-03  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-tinyurl-get): more descriptive
	error message
	(twittering-url-copy-file-async): more descriptive error message

2010-01-02  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el (twittering-start-http-ssl-session):
	Set noninteractive using lexical-let so the HTTP sentinel can
	receive its value and `twittering-new-tweets-hook' works